# domestica

./: .gitignore  MANIFEST.in  README.md  lift.toml  pyproject.toml  requirements.txt
domesticator3/: domesticator3.py
domesticator3/tools/: input_parsing.py
src/domestica/: AA_analysis.py  __main__.py  cli.py  codon_opt.py  core.py  idt.py  io_utils.py  vector_assembly.py
src/domestica/specifications/: MinimizeNumKmers.py
tests/: test_cli.py
tests/data/: gg_insert.gb
