[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "domestica"
version = "0.1.0"
description = "AA sequence analyser and CDS insert optimizer: Excel/FASTA -> Params -> DNA Opt -> Excel"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biopython",
    "dnachisel",
    "numpy",
    "openpyxl",
    "pandas",
    "requests"
]

[project.scripts]
domestica = "domestica.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["domestica*"]

[tool.setuptools.package-data]
"domestica.specifications" = ["*.gb"]